update main.handlebars - create public folder to add menu.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -25,15 +24,8 @@
     ></script>
 
     <style>
-      .bg-black-alt {
-        background: #191919;
-      }
-      .text-black-alt {
-        color: #191919;
-      }
-      .border-black-alt {
-        border-color: #191919;
-      }
+      .bg-black-alt { background: #191919; } .text-black-alt { color: #191919; }
+      .border-black-alt { border-color: #191919; }
     </style>
   </head>
   <body class="bg-black-alt font-sans leading-normal tracking-normal">
@@ -46,7 +38,8 @@
             class="text-gray-100 text-base xl:text-xl no-underline hover:no-underline font-bold"
             href="#"
           >
-            <i class="fas fa-crown text-yellow-400 pr-3"></i> Guru
+            <i class="fas fa-crown text-yellow-400 pr-3"></i>
+            Guru
           </a>
         </div>
         <div class="w-1/2 pr-0">
@@ -62,9 +55,7 @@
                   src="images/user-image.jpg"
                   alt="User Level"
                 />
-                <span class="hidden md:inline-block text-gray-100"
-                  >Hi, User</span
-                >
+                <span class="hidden md:inline-block text-gray-100">Hi, User</span>
                 <svg
                   class="pl-2 h-2 fill-current text-gray-100"
                   version="1.1"
@@ -76,7 +67,7 @@
                   <g>
                     <path
                       d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"
-                    />
+                    ></path>
                   </g>
                 </svg>
               </button>
@@ -89,8 +80,7 @@
                     <a
                       href="#"
                       class="px-4 py-2 block text-gray-100 hover:bg-gray-800 no-underline hover:no-underline"
-                      >My Projects</a
-                    >
+                    >My Projects</a>
                   </li>
 
                   <li><hr class="border-t mx-2 border-gray-400" /></li>
@@ -98,8 +88,7 @@
                     <a
                       href="#"
                       class="px-4 py-2 block text-gray-100 hover:bg-gray-800 no-underline hover:no-underline"
-                      >Logout</a
-                    >
+                    >Logout</a>
                   </li>
                 </ul>
               </div>
@@ -116,7 +105,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                 >
                   <title>Menu</title>
-                  <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+                  <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
                 </svg>
               </button>
             </div>
@@ -133,8 +122,9 @@
                 href="#"
                 class="block py-1 md:py-3 pl-1 align-middle text-blue-400 no-underline hover:text-gray-100 border-b-2 border-blue-400 hover:border-blue-400"
               >
-                <i class="fas fa-home fa-fw mr-3 text-blue-400"></i
-                ><span class="pb-1 md:pb-0 text-sm">Home</span>
+                <i class="fas fa-home fa-fw mr-3 text-blue-400"></i><span
+                  class="pb-1 md:pb-0 text-sm"
+                >Home</span>
               </a>
             </li>
             <li class="mr-6 my-2 md:my-0">
@@ -142,8 +132,9 @@
                 href="#"
                 class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-pink-400"
               >
-                <i class="fas fa-tasks fa-fw mr-3"></i
-                ><span class="pb-1 md:pb-0 text-sm">My Dashboard</span>
+                <i class="fas fa-tasks fa-fw mr-3"></i><span
+                  class="pb-1 md:pb-0 text-sm"
+                >My Dashboard</span>
               </a>
             </li>
             <li class="mr-6 my-2 md:my-0">
@@ -151,8 +142,9 @@
                 href="#"
                 class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-purple-400"
               >
-                <i class="fa fa-envelope fa-fw mr-3"></i
-                ><span class="pb-1 md:pb-0 text-sm">Inbox</span>
+                <i class="fa fa-envelope fa-fw mr-3"></i><span
+                  class="pb-1 md:pb-0 text-sm"
+                >Inbox</span>
               </a>
             </li>
             <li class="mr-6 my-2 md:my-0">
@@ -160,8 +152,9 @@
                 href="#"
                 class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-green-400"
               >
-                <i class="fas fa-plus fa-fw mr-3"></i
-                ><span class="pb-1 md:pb-0 text-sm">Create A Project</span>
+                <i class="fas fa-plus fa-fw mr-3"></i><span
+                  class="pb-1 md:pb-0 text-sm"
+                >Create A Project</span>
               </a>
             </li>
             <li class="mr-6 my-2 md:my-0">
@@ -169,8 +162,9 @@
                 href="#"
                 class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-red-400"
               >
-                <i class="fa fa-question fa-fw mr-3"></i
-                ><span class="pb-1 md:pb-0 text-sm">Ask A Question</span>
+                <i class="fa fa-question fa-fw mr-3"></i><span
+                  class="pb-1 md:pb-0 text-sm"
+                >Ask A Question</span>
               </a>
             </li>
           </ul>
@@ -192,7 +186,8 @@
             <h3 class="font-bold font-bold text-gray-100">About</h3>
             <p class="py-4 text-gray-600 text-sm">
               Guru is an online collaboration app, designed to allow users to
-              organise and easily keep track of their projects. <br />
+              organise and easily keep track of their projects.
+              <br />
               Climb the Guru ranks and earn points by helping others answer
               queries!
             </p>
