--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,12 @@
 <!-- LOGIN FORM -->
 
-<div class="h-screen flex justify-center items-center">
+<div class="h-screen flex justify-center items-center mt-12">
   <div
     class="bg-gray-900 border border-gray-800 shadow p-2 rounded-lg w-2/5 px-16 py-16"
   >
     <form>
       <div class="flex font-bold justify-center">
-        <img class="h-20 w-20" src="images/user-image.jpg" />
+        <img class="h-20 w-20" src="/Users/chaz/Bootcamp/week15/PROJECT2/images/user-image.jpg"/>
       </div>
       <h2 class="text-3xl text-center text-gray-500 mb-4">Login To Your Account</h2>
       <div
@@ -15,7 +15,6 @@
       >
         <div class="i">
           <i class="fas fa-envelope text-gray-500"></i>
-
         </div>
         <div class="div">
           <input
