--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,7 +43,7 @@
           <div class="relative text-sm text-gray-100">
             <button id="userButton" class="flex items-center focus:outline-none mr-3">
               <!-- ADD USER LEVEL HERE -->
-              <img class="w-8 h-8 rounded-full mr-4" src="/Users/chaz/Bootcamp/week15/PROJECT2/images/user-image.jpg" alt="User Level" />
+              <img class="w-8 h-8 rounded-full mr-4" src="/images/user-image.jpg" alt="User Image" />
               <span class="hidden md:inline-block text-gray-100">Hi, User</span>
               <svg class="pl-2 h-2 fill-current text-gray-100" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 129 129" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 129 129">
@@ -95,7 +95,7 @@
             </a>
           </li>
           <li class="mr-6 my-2 md:my-0">
-            <a href="#"
+            <a href=""
               class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-pink-400">
               <i class="fas fa-tasks fa-fw mr-3"></i><span class="pb-1 md:pb-0 text-sm">My Dashboard</span>
             </a>
