--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
   >
     <form>
       <div class="flex font-bold justify-center">
-        <img class="h-20 w-20" src="/Users/chaz/Bootcamp/week15/PROJECT2/images/user-image.jpg"/>
+        <img class="h-20 w-20" src="/images/user-image.jpg" alt="User Image"/>
       </div>
       <h2 class="text-3xl text-center text-gray-500 mb-4">Login To Your Account</h2>
       <div
