fixed styling for questions page

--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -21,7 +21,7 @@
             
               <input
                 type="text"
-                class=" form-input absolute w-full h-full py-2 px-3  inset-0 text-black-100 border-b-2 hover:border-pink-400"
+                class=" form-input absolute w-full h-full py-3 px-3 inset-0 text-black-100 border-b-2 hover:border-pink-400"
                 style="background: white "
                 placeholder="Question Title"
                 name="question-title"
@@ -40,13 +40,14 @@
             <div class="div">
              
               <textarea
-              class=" form-input absolute w-full h-full py-2 px-3 inset-0 text-black-100 border-b-2 hover:border-pink-400"
-              style="background: white; height: 8rem" id="content" name = "content"placeholder="Type your question here..."></textarea>
+              class=" form-input absolute w-full h-full py-3 px-2 inset-0 text-black-100 border-b-2 hover:border-pink-400"
+              style="background: white; height: 7rem" id="content" name = "content"placeholder="Type your question here..."></textarea>
             </div>
             
           </div>
           <button
           type="submit"
+          id="createQuestion"
           class="w-full py-2 rounded-full bg-pink-600 text-gray-300 focus:outline-none hover:text-gray-100 mt-24"
         
         >
@@ -55,4 +56,4 @@
         </form>
         </div>
 
-<script src=""></script>
+<script src="/js/question.js"></script>
