fixed error with question.routes and redirect to Answer page

--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -48,11 +48,15 @@
           <button
           type="submit"
           id="createQuestion"
-          class="w-full py-2 rounded-full bg-pink-600 text-gray-300 focus:outline-none hover:text-gray-100 mt-24"
+          class="w-full py-2 rounded-full bg-pink-600 text-gray-300 focus:outline-none hover:text-gray-100 mt-24 mb-8"
         
         >
          Create New Question 
         </button>
+        <a
+        href="/answer"
+        class="text-xs text-gray-300 hover:text-pink-400 float-right mb-4"
+      >Or Click Here To View Questions/Answers</a>
         </form>
         </div>
 
