reference for merge

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -52,7 +52,7 @@
         type="submit"
         class="w-full py-2 rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100"
       >
-        Sign In
+        Login
       </button>
     </form>
   </div>
