--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,141 @@
+<div class="my-24 bg-black-alt font-sans leading-normal tracking-normal text-gray-500">
+  <div class="max-w-2xl mx-auto my-1" >
+        <div class="create-project  my-4">
+          <button id="create-project" class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1">+ Create project</button>
+          <form id="create-project-form" class="w-full max-w-xl rounded-lg add-card hidden">
+            <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full md:w-full px-3 mb-2 mt-2">
+                  <label for="name">Project name:</label>
+                  <input id="project_name" class=" rounded border border-gray-400 w-full py-2 px-3 font-medium placeholder-gray-700 focus:outline-none " name="name"  required></input>
+                </div>
+                <div class="w-full md:w-full flex items-start md:w-full px-3">
+                  <div class="w-full md:w-full px-3 mb-2 mt-2">
+                    <label for="start">Start date:</label>
+                    <input id="start_date" type="date" min="2018-01-01" class=" rounded border border-gray-400  py-2 px-3 font-medium placeholder-gray-700 focus:outline-none " name="start"  required></input>
+                  </div>
+                  <div class="w-full md:w-full px-3 mb-2 mt-2">
+                    <label for="start">End date:</label>
+                    <input id="end_date" type="date" min="2018-01-01" class=" rounded border border-gray-400  py-2 px-3 font-medium placeholder-gray-700 focus:outline-none " name="start"  required></input>
+                  </div>
+                </div>
+                <div class="w-full md:w-full px-3 mb-2 mt-2">
+                  <label for="name">Assigned team:</label>
+                  <input id="team" class="form-select" list="list" />
+                    <datalist id="list">
+                      {{#each teams as |team|}}
+                      <option value="{{team.team_name}}"></option>
+                      {{/each}}
+                    </datalist>
+                </div>
+                <div class="w-full md:w-full flex items-start md:w-full px-3">
+                  <button type="submit " form="create-project-form" class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1 ">Create</button>
+                  <button type='button' class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1 cancelBtn">Cancel</button>
+                </div>
+              </div>
+          </form>
+        </div>
+        <div class="create-question">
+          <!-- redirect to question page -->
+          <a id="to-question" href="/questions" class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1">+ Create question</a>
+        </div>    
+    </div>
+  <div class="max-w-4xl mx-auto w-full md:w-full my-5 rounded-md border border-gray-700 p-4" >
+        <!-- project list -->
+        <h2 class="text-xl mb-4">Your project</h2>
+        <div class="w-full md:w-full">
+
+          <div class="w-full md:w-full relative overflow-x-auto shadow-md sm:rounded-lg">
+
+              <table class="w-full md:w-full text-sm text-left text-gray-400 table">
+                <thead class="text-xs uppercase bg-gray-700 dark:text-gray-400">
+                  <tr>
+                    <th scope="col" class="p-4">
+                      id
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                      Project name
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                      start date
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                      end date
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                      team
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                      <span class="sr-only">Kanban</span>
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                      <span class="sr-only">Edit</span>
+                    </th>
+                  </tr>
+                </thead>
+                <tbody>
+                   {{#each employee.projects as |project|}}
+                  <tr
+                    class="bg-gray-800 border-gray-700 hover:bg-gray-600">
+                    <td class="px-6 py-4 font-medium text-white whitespace-nowrap">
+                      {{project.id}}
+                    </td>
+                    <th scope="row" class="px-6 py-4 font-medium text-white whitespace-nowrap">
+                      {{project.project_name}}
+                    </th>
+                    <td class="px-6 py-4">
+                      {{project.start_date}}
+                    </td>
+                    <td class="px-6 py-4">
+                      {{project.end_date}}
+                    </td>
+                    <td class="px-6 py-4">
+                      {{../employee.team_name}}
+                    </td>
+                    <td class="px-6 py-4 text-right">
+                      <button type="button" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Kanban</button>
+                    </td>
+                    <td class="px-6 py-4 text-right">
+                      <button type="button" class="font-medium text-blue-600 dark:text-blue-500 hover:underline editBtn" data-id="{{project.id}}">Edit</button>
+                    </td>
+                  </tr>
+                  {{/each}}
+                </tbody>
+              </table>
+              <form id="update-project-form" class="w-full max-w-xl rounded-lg add-card hidden">
+                <div class="flex flex-wrap -mx-3 mb-6">
+                    <div class="w-full md:w-full flex items-start md:w-full px-3">
+                      <div class="w-full md:w-full px-3 mb-2 mt-2">
+                        <label for="start">Start date:</label>
+                        <input type="date" min="2018-01-01" id="start_date" class=" rounded border border-gray-400  py-2 px-3 font-medium placeholder-gray-700 focus:outline-none " name="start" ></input>
+                      </div>
+                      <div class="w-full md:w-full px-3 mb-2 mt-2">
+                        <label for="start">End date:</label>
+                        <input type="date" min="2018-01-01" id="end_date" class=" rounded border border-gray-400  py-2 px-3 font-medium placeholder-gray-700 focus:outline-none " name="start" ></input>
+                      </div>
+                    </div>
+                    <div class="w-full md:w-full px-3 mb-2 mt-2">
+                      <label for="name">Assigned team:</label>
+                      <input class="form-select" id="team" list="list" />
+                        <datalist id="list">
+                          <option value="team 1"></option>
+                          <option value="team 2"></option>
+                        </datalist>
+                    </div>
+                    <div class="w-full md:w-full flex items-start md:w-full px-3">
+                      <button type="submit " form="update-project-form" class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1 ">Update</button>
+                      <button type='button'  class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1 cancelEditBtn">Cancel</button>
+                    </div>
+                  </div>
+              </form>
+            </div>
+        </div>
+        
+    </div>
+</div>
+    
+        
+<script src="/js/dashboard.js"></script>
+=======
 <div class="container mx-auto mt-44 flex justify-center items-center h-96">
    
 </div>
