--- a/views/answer.handlebars
+++ b/views/answer.handlebars
@@ -22,12 +22,13 @@
              
               <textarea
               class=" form-input absolute w-full h-full py-2 px-3 inset-0 text-black-100 border-b-2 hover:border-pink-400"
-              style="background: white; height: 8rem" id="answer" name = "answer"placeholder="Type your answer here..."></textarea>
+              style="background: white; height: 6rem" id="answer" name = "answer"placeholder="Type your answer here..."></textarea>
             </div>
             
           </div>
           <button
           type="submit"
+          id="createAnswer"
           class="w-full py-2 rounded-full bg-pink-600 text-gray-300 focus:outline-none hover:text-gray-100 mt-24"
         
         >
