--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -59,5 +59,14 @@
       >Or Click Here To View Questions/Answers</a>
         </form>
         </div>
+<div>
+  <h1>
+    {{question.question_title}}
+  </h1>
+  <p>
+    {{question.question_contents}}
+  </p>
+</div>
+
 
 <script src="/js/question.js"></script>
