--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
   <nav id="header" class="bg-gray-900 fixed w-full z-10 top-0 shadow">
     <div class="w-full container mx-auto flex flex-wrap items-center mt-0 pt-3 pb-3 md:pb-0">
       <div class="w-1/2 pl-2 md:pl-0">
-        <a class="text-gray-100 text-base xl:text-xl no-underline hover:no-underline font-bold" href="#">
+        <a class="text-gray-100 text-base xl:text-xl no-underline hover:no-underline font-bold" href="/">
           <i class="fas fa-crown text-yellow-400 pr-3"></i>
           Guru
         </a>
@@ -57,34 +57,34 @@
       <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-gray-900 z-20"
         id="nav-content">
         <ul class="list-reset lg:flex flex-1 items-center px-4 md:px-0">
-          <li class="mr-6 my-2 md:my-0">
-            <a href="/"
-              class="block py-1 md:py-3 pl-1 align-middle text-blue-400 no-underline hover:text-gray-100 border-b-2 border-blue-400 hover:border-blue-400">
-              <i class="fas fa-home fa-fw mr-3 text-blue-400"></i><span class="pb-1 md:pb-0 text-sm">Home</span>
+          <li id="home" class="mr-6 my-2 md:my-0">
+            <a href="/" 
+              class="dashboard block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-red-400">
+              <i id="fav-h" class="fas fa-home fa-fw mr-3"></i><span class="pb-1 md:pb-0 text-sm">Home</span>
+            </a>
+          </li>
+          <li id="dashboard" class="mr-6 my-2 md:my-0">
+            <a href="/dashboard" 
+              class="dashboard block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-red-400">
+              <i id="fav-d" class="fas fa-tasks fa-fw mr-3"></i><span class="pb-1 md:pb-0 text-sm">My Dashboard</span>
+            </a>
+          </li>
+          <li id="question" class="mr-6 my-2 md:my-0">
+            <a href="/question" 
+              class="question block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-red-400">
+              <i id="fav-q" class="fa fa-question fa-fw mr-3"></i><span class="pb-1 md:pb-0 text-sm">Ask A Question</span>
             </a>
           </li>
           <li class="mr-6 my-2 md:my-0">
-            <a href="/dashboard"
-              class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-pink-400">
-              <i class="fas fa-tasks fa-fw mr-3"></i><span class="pb-1 md:pb-0 text-sm">My Dashboard</span>
-            </a>
-          </li>
-          {{!-- <li class="mr-6 my-2 md:my-0">
             <a href="#"
               class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-purple-400">
               <i class="fa fa-envelope fa-fw mr-3"></i><span class="pb-1 md:pb-0 text-sm">Inbox</span>
             </a>
-          </li> --}}
-          {{!-- <li class="mr-6 my-2 md:my-0">
+          </li> 
+           <li class="mr-6 my-2 md:my-0">
             <a href="#"
               class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-green-400">
               <i class="fas fa-plus fa-fw mr-3"></i><span class="pb-1 md:pb-0 text-sm">Create A Project</span>
-            </a>
-          </li> --}}
-          <li class="mr-6 my-2 md:my-0">
-            <a href="/question"
-              class="block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-red-400">
-              <i class="fa fa-question fa-fw mr-3"></i><span class="pb-1 md:pb-0 text-sm">Ask A Question</span>
             </a>
           </li>
         </ul>
@@ -164,8 +164,7 @@
       </div>
     </div>
   </footer>
-  <script src="/js/menu.js"></script>
-  <script src="/js/logout.js"></script>
+  <script src="./js/logout.js"></script>
 </body>
 
 </html>
