--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -44,10 +44,19 @@
     </form>
     <div class="container mx-auto mt-6">
       {{#each question as |q|}}
-      <div class="mb-5 ml-12 w-full rounded overflow-hidden shadow-lg flex justify-between">
+      <div class="mb-5 ml-12 w-full rounded overflow-hidden shadow-lg flex justify-between border-b-2">
+        
         <div class="px-6 py-4">
-          <p class="font-bold text-xl mb-2">{{q.question_title}}</p>
-          <p class="text-gray-700 text-base">{{q.question_contents}}</p>
+          <p class="font-bold text-xl mb-2 text-gray-300 ">{{q.question_title}}</p>
+          <p class="text-gray-500 text-base">{{q.question_contents}}</p>
+          <button type="submit" id="deleteButton"
+        class="w-full py-2 rounded-full bg-indigo-600 text-gray-300 focus:outline-none hover:text-gray-100 mt-4 mb-2">
+        Delete
+      </button>
+          <button type="submit" id="answerButton"
+        class="w-full py-2 rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 mb-8">
+        Add Answer
+      </button>
         </div>
       </div>
       {{/each}}
