add delete question functionality

--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -42,7 +42,7 @@
       <a href="/answer" class="text-xs text-gray-300 hover:text-pink-400 float-right mb-4">Or Click Here To View
         Questions/Answers</a>
     </form>
-    <div class="container mx-auto mt-6">
+    <div id="question" class="container mx-auto mt-6">
       {{#each question as |q|}}
       <div class="mb-5 ml-12 w-full rounded overflow-hidden shadow-lg flex justify-between border-b-2">
         
