fixed button styling

--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -50,11 +50,11 @@
           <p class="font-bold text-xl mb-2 text-gray-300 ">{{q.question_title}}</p>
           <p class="text-gray-500 text-base">{{q.question_contents}}</p>
           <button type="submit" id="deleteButton"
-        class="w-full py-2 rounded-full bg-indigo-600 text-gray-300 focus:outline-none hover:text-gray-100 mt-4 mb-2">
+        class="bg-gray-100 hover:bg-blue-600 text-gray-800 font-semibold py-2 px-4 border border-pink-400 rounded shadow mt-12 hover:text-gray-100">
         Delete
       </button>
           <button type="submit" id="answerButton"
-        class="w-full py-2 rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 mb-8">
+        class="bg-pink-600 hover:bg-gray-100 text-gray-100 font-semibold py-2 px-4 border border-gray-400 rounded shadow mt-12 hover:text-pink-600">
         Add Answer
       </button>
         </div>
