Fixed a few issues

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -65,13 +65,13 @@
           </li>
           <li id="dashboard" class="mr-6 my-2 md:my-0">
             <a href="/dashboard" 
-              class="dashboard block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-red-400">
+              class="dashboard block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-yellow-400">
               <i id="fav-d" class="fas fa-tasks fa-fw mr-3"></i><span class="pb-1 md:pb-0 text-sm">My Dashboard</span>
             </a>
           </li>
           <li id="question" class="mr-6 my-2 md:my-0">
             <a href="/question" 
-              class="question block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-red-400">
+              class="question block py-1 md:py-3 pl-1 align-middle text-gray-500 no-underline hover:text-gray-100 border-b-2 border-gray-900 hover:border-pink-400">
               <i id="fav-q" class="fa fa-question fa-fw mr-3"></i><span class="pb-1 md:pb-0 text-sm">Ask A Question</span>
             </a>
           </li>
