--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
   <div class="max-w-2xl mx-auto my-1" >
         <div class="create-project  my-4">
           <button id="create-project" class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1">+ Create project</button>
-          <form id="create-project-form" class="w-full max-w-xl rounded-lg add-card hidden">
+          <form id="create-project-form" class="w-full max-w-xl rounded-lg add-card hidden" autocomplete="off" >
             <div class="flex flex-wrap -mx-3 mb-6">
                 <div class="w-full md:w-full px-3 mb-2 mt-2">
                   <label for="name">Project name:</label>
@@ -20,7 +20,7 @@
                 </div>
                 <div class="w-full md:w-full px-3 mb-2 mt-2">
                   <label for="name">Assigned team:</label>
-                  <input id="team" class="form-select" list="list" />
+                  <input autocomplete="off"  id="team" class="form-select" list="list" />
                     <datalist id="list">
                       {{#each teams as |team|}}
                       <option value="{{team.team_name}}"></option>
@@ -33,11 +33,7 @@
                 </div>
               </div>
           </form>
-        </div>
-        <div class="create-question">
-          <!-- redirect to question page -->
-          <a id="to-question" href="/questions" class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1">+ Create question</a>
-        </div>    
+        </div> 
     </div>
   <div class="max-w-4xl mx-auto w-full md:w-full my-5 rounded-md border border-gray-700 p-4" >
         <!-- project list -->
@@ -92,7 +88,7 @@
                       {{../employee.team_name}}
                     </td>
                     <td class="px-6 py-4 text-right">
-                      <button type="button" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Kanban</button>
+                      <a href="/projects/{{project.id}}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Kanban</a>
                     </td>
                     <td class="px-6 py-4 text-right">
                       <button type="button" class="font-medium text-blue-600 dark:text-blue-500 hover:underline editBtn" data-id="{{project.id}}">Edit</button>
