--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -97,7 +97,7 @@
 
   <!--/container-->
 
-  <footer class="bg-gray-900 border-t border-gray-400 shadow w-full">
+  <footer class="bg-gray-900 mt-6 border-t border-gray-400 shadow w-full">
     <div class="container max-w-md mx-auto flex py-8">
       <div class="w-full mx-auto flex flex-wrap">
         <div class="px-8">
