--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -1,6 +1,6 @@
 <!-- Question Form -->
 
-<div class="h-auto flex justify-center items-center">
+<div class="h-auto mx-auto mt-24 flex flex-col justify-center items-center">
   <div class="bg-gray-900 border border-gray-800 shadow p-2 rounded-lg w-2/5 px-16 py-16">
     <form id="question-form">
       <div class="flex font-bold justify-center" style="padding-bottom: 5%">
@@ -39,29 +39,25 @@
         class="w-full py-2 rounded-full bg-pink-600 text-gray-300 focus:outline-none hover:text-gray-100 mt-24 mb-8">
         Create New Question
       </button>
-      <a href="/answer" class="text-xs text-gray-300 hover:text-pink-400 float-right mb-4">Or Click Here To View
-        Questions/Answers</a>
     </form>
-    <div id="question" class="container mx-auto mt-6">
-      {{#each question as |q|}}
-      <div class="mb-5 ml-12 w-full rounded overflow-hidden shadow-lg flex justify-between border-b-2">
-        
-        <div class="px-6 py-4">
-          <p class="font-bold text-xl mb-2 text-gray-300 ">{{q.question_title}}</p>
-          <p class="text-gray-500 text-base">{{q.question_contents}}</p>
-          <button type="submit" id="deleteButton"
-        class="bg-pink-600 hover:bg-gray-100 text-gray-100 py-2 px-4 rounded shadow mt-12 hover:text-pink-600 hover:border-pink-400">
+  </div>
+  {{#each question as |q|}}
+  <div id="question"
+    class="bg-gray-900 rounded mt-6 px-12 w-3/4 rounded overflow-hidden shadow-lg flex items-center justify-between border-b-2">
+    <div class="my-6">
+      <p class="font-bold text-xl mb-2 text-gray-300">{{q.question_title}}</p>
+      <p class="text-gray-500 text-base">{{q.question_contents}}</p>
+    </div>
+    <div class="my-6">
+      <a type="submit" href="/answer"
+        class="bg-pink-600 hover:bg-gray-100 text-gray-100 py-2 px-4 rounded shadow hover:text-pink-600 hover:border-pink-400">
+        Add Answer
+      </a>
+      <button data-id={{q.id}}
+        class="delete-btn bg-pink-600 hover:bg-gray-100 text-gray-100 py-2 px-4 rounded shadow hover:text-pink-600 hover:border-pink-400">
         Delete
       </button>
-          <button type="submit" id="answerButton"
-        class="bg-pink-600 hover:bg-gray-100 text-gray-100 py-2 px-4 rounded shadow mt-12 hover:text-pink-600 hover:border-pink-400">
-        Add Answer
-      </button>
-        </div>
-      </div>
-      {{/each}}
     </div>
   </div>
-
-
-  <script src="/js/question.js"></script>
+  {{/each}}
+  <script src="./js/question.js"></script>
