--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -49,7 +49,7 @@
       <p class="text-gray-500 text-base">{{q.question_contents}}</p>
     </div>
     <div class="my-6">
-      <a type="submit" href="/answer"
+      <a type="submit" href="/comment/{{q.id}}"
         class="bg-pink-600 hover:bg-gray-100 text-gray-100 py-2 px-4 rounded shadow hover:text-pink-600 hover:border-pink-400">
         Add Answer
       </a>
@@ -59,5 +59,19 @@
       </button>
     </div>
   </div>
+  {{#each comment as |a|}}
+  <div id="question"
+    class="mr-12 bg-gray-900 rounded mt-6 px-12 w-3/4 rounded overflow-hidden shadow-lg flex items-center justify-between border-b-2">
+    <div class="my-6">
+      <p class="text-gray-500 text-base">{{a.content}}</p>
+    </div>
+    <div class="my-6">
+      <button data-id={{a.id}}
+        class="delete-btn bg-pink-600 hover:bg-gray-100 text-gray-100 py-2 px-4 rounded shadow hover:text-pink-600 hover:border-pink-400">
+        Delete
+      </button>
+    </div>
+  </div>
+  {{/each}}
   {{/each}}
   <script src="./js/question.js"></script>
