updated Readme.md and added screen shots

--- a/views/answer.handlebars
+++ b/views/answer.handlebars
@@ -8,7 +8,8 @@
           <div class="flex font-bold justify-center" style="padding-bottom: 5%">
             <i class="fa fa-question fa-fw mr-3 text-pink-600" style="font-size: 50px;"></i>
           </div>
-          <h2 class="text-3xl text-center text-gray-300 mb-4">SHOW QUESTION DYNAMICALLY HERE</h2>
+          <h2 class="text-3xl text-center text-gray-300 mb-4">Example Question Title</h2>
+          <h3 class="text-1xl text-center text-gray-300 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat?</h3>
 
           <div
             class="input-div border-b-2 relative grid my-5 py-1 focus:outline-none"
