--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -152,7 +152,7 @@
       </div>
     </div>
   </footer>
-  <script src="./js/logout.js"></script>
+  <script src="/js/logout.js"></script>
 </body>
 
 </html>
