--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -43,14 +43,14 @@
   </div>
   {{#each question as |q|}}
   <div id="question"
-    class="bg-gray-900 rounded mt-6 px-12 w-3/4 rounded overflow-hidden shadow-lg flex items-center justify-between border-b-2">
+    class="bg-gray-900 rounded mt-6 px-12 w-3/4 rounded overflow-hidden shadow-lg justify-between border-b-2 max-w-full md:flex-col">
     <div class="my-6">
-      <p class="font-bold text-xl mb-2 text-gray-300">{{q.question_title}}</p>
-      <p class="text-gray-500 text-base">{{q.question_contents}}</p>
+      <p class="font-bold text-xl mb-2 text-gray-300 text-left">{{q.question_title}}</p>
+      <p class="text-gray-500 text-base text-left">{{q.question_contents}}</p>
     </div>
-    <div class="my-6">
+    <div class="my-6 flex items-center">
       <a type="submit" href="/answer"
-        class="bg-pink-600 hover:bg-gray-100 text-gray-100 py-2 px-4 rounded shadow hover:text-pink-600 hover:border-pink-400">
+        class="bg-pink-600 hover:bg-gray-100 text-gray-100 py-2 px-4 rounded shadow hover:text-pink-600 hover:border-pink-400 mr-4">
         Add Answer
       </a>
       <button data-id={{q.id}}
