--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -43,8 +43,8 @@
   </div>
   {{#each question as |q|}}
   <div id="question"
-    class="bg-gray-900 rounded mt-6 px-12 w-3/4 rounded overflow-hidden shadow-lg flex items-center justify-between border-b-2">
-    <div class="my-6">
+    class="bg-gray-900 rounded mt-6 px-12 w-3/4 rounded overflow-hidden shadow-lg items-center justify-between border-b-2">
+    <div class="my-6 flex flex-wrap w-2/4">
       <p class="font-bold text-xl mb-2 text-gray-300">{{q.question_title}}</p>
       <p class="text-gray-500 text-base">{{q.question_contents}}</p>
     </div>
