--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<div class="my-24 bg-black-alt font-sans leading-normal tracking-normal text-gray-500">
+<div class="my-24 mt-60 lg:mt-32 bg-black-alt font-sans leading-normal tracking-normal text-gray-500">
   <div class="max-w-2xl mx-auto my-1" >
         <div class="create-project  my-4">
           <button id="create-project" class="rounded-full bg-green-600 text-gray-300 focus:outline-none hover:text-gray-100 py-1 p-4 mr-1">+ Create project</button>
