--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
 <!-- LOGIN FORM -->
 
-<div class="h-screen flex justify-center items-center mt-12">
+<div class="h-screen flex justify-center items-center mt-24 lg:mt-12">
   <div
-    class="bg-gray-900 border border-gray-800 shadow p-2 rounded-lg w-2/5 px-16 py-16"
+    class="bg-gray-900 border border-gray-800 shadow p-2 rounded-lg w-full mx-6 lg:w-2/5 px-16 py-16"
   >
     <form id="login-form">
       <div class="flex font-bold justify-center">
