--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,8 +1,8 @@
 <!-- SIGNUP FORM -->
 
-<div class="h-screen flex justify-center items-center">
+<div class="h-screen flex justify-center mt-40 lg:mt-12 items-center">
   <div
-    class="bg-gray-900 border border-gray-800 shadow p-2 rounded-lg w-2/5 px-16 py-16"
+    class="bg-gray-900 border border-gray-800 shadow p-2 rounded-lg w-full mx-6 lg:w-2/5 px-16 py-16"
   >
     <form id="signup-form">
       <div class="flex font-bold justify-center">
