--- a/views/answer.handlebars
+++ b/views/answer.handlebars
@@ -1,8 +1,8 @@
  <!-- Answer Form -->
 
-    <div class="h-screen flex justify-center items-center">
+    <div class="h-screen flex justify-center mt-56 lg:mt-12 items-center">
       <div
-        class="bg-gray-900 border border-gray-800 shadow p-2 rounded-lg w-2/5 px-16 py-16"
+        class="bg-gray-900 border border-gray-800 shadow p-2 rounded-lg w-96 lg:w-2/5 px-16 py-16"
       >
         <form>
           <div class="flex font-bold justify-center" style="padding-bottom: 5%">
