--- a/views/kanban.handlebars
+++ b/views/kanban.handlebars
@@ -1,4 +1,4 @@
-<div class="kanban flex flex-wrap my-24">
+<div class="kanban mt-60 lg:mt-32 flex flex-wrap my-24">
     <div class="w-1/3 p-3">  
       <div class="bg-gray-900 border border-gray-800 shadow rounded-lg p-2" >
           <div class="font-bold uppercase text-gray-400" data-column="To do">To do</div>
