--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -54,7 +54,7 @@
         </div>
       </div>
 
-      <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-gray-900 z-20"
+      <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto block mt-2 lg:mt-0 bg-gray-900 z-20"
         id="nav-content">
         <ul class="list-reset lg:flex flex-1 items-center px-4 md:px-0">
           <li id="home" class="mr-6 my-2 md:my-0">
