--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -1,7 +1,7 @@
 <!-- Question Form -->
 
-<div class="h-auto mx-auto mt-24 flex flex-col justify-center items-center">
-  <div class="bg-gray-900 border border-gray-800 shadow p-2 rounded-lg w-2/5 px-16 py-16">
+<div class="h-auto mt-52 lg:mt-24 flex flex-col items-center">
+  <div class="bg-gray-900 border border-gray-800 shadow p-2 rounded-lg w-96 lg:w-2/5 px-16 py-16">
     <form id="question-form">
       <div class="flex font-bold justify-center" style="padding-bottom: 5%">
         <i class="fa fa-question fa-fw mr-3 text-pink-600" style="font-size: 50px;"></i>
